Implement MCU layout discovery and enhance runtime session management
- Added a new target in CoralinkerHost.csproj to copy the MCU serial bridge DLL after build.
- Updated README_FOR_AI.md with new MCU integration features, including layout discovery and CANMessage API.
- Refactored RuntimeSessionService to manage the last build and connect to nodes.
- Enhanced VariableInspectorPushService to periodically push node snapshots.
- Updated API routes to support new connect and node port configuration functionalities.
- Improved UI elements in app.js and app.css for better user experience.
- Added support for MCU layout information retrieval in MCUSerialBridge and related classes.

--- a/3rd/CoralinkerHost/wwwroot/index.html
+++ b/3rd/CoralinkerHost/wwwroot/index.html
@@ -128,10 +128,17 @@
       <button id="btnImport" class="iconBtn" title="Import from local">Import</button>
       <input id="importFile" type="file" accept="application/json" class="hidden" />
       <div class="spacer"></div>
-      <button id="btnConnectAll" class="iconBtn" title="Connect all (Pending)">Connect</button>
       <button id="btnBuild" class="iconBtn" title="Build">Build</button>
       <button id="btnClearTerminal" class="iconBtn" title="Clear terminal">Clear</button>
-      <button id="btnRun" class="iconBtn primary" title="Run">▶ Run</button>
+      <div class="toolbarDivider" aria-hidden="true"></div>
+      <button id="btnConnectAll" class="iconBtn withIcon" title="Connect">
+        <svg viewBox="0 0 20 20" aria-hidden="true">
+          <path d="M6.2 6.2a4 4 0 0 1 5.6 0l.9.9a3 3 0 0 1 0 4.2l-1.3 1.3a3 3 0 0 1-4.2 0l-.7-.7" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+          <path d="M13.8 13.8a4 4 0 0 1-5.6 0l-.9-.9a3 3 0 0 1 0-4.2l1.3-1.3a3 3 0 0 1 4.2 0l.7.7" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
+        </svg>
+        <span>Connect</span>
+      </button>
+      <button id="btnRun" class="iconBtn primary" title="Start">▶ Start</button>
       <button id="btnStop" class="iconBtn danger" title="Stop">■ Stop</button>
     </div>
 
